add putting address data support

--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@ window.onload = function() {
 <dt>DATA[B|W|L] データ(列)</dt>
 <dd>4バイト単位にアライメントした後、指定したデータ(整数)を出力する。データ列はコンマで区切る。
 DATA/DATABは1バイトずつ、DATAWは2バイトずつ、DATALは4バイトずつである。</dd>
+<dt>(I|D)ADDR(W|L) @文字列</dt>
+<dd>指定したラベルのアドレスをデータとして出力する。アライメントはしない。
+Iは命令用(命令セットがM0の時、LSBを1にする)、Dはデータ用。Wは2バイト、Lは4バイト。</dd>
 <dt>MODE (M0|RV32C)</dt>
 <dd>命令セットを切り替える。デフォルトはM0である。</dd>
 <dt>IF M0 GOTO @文字列</dt>
