--- a/rvasm.html
+++ b/rvasm.html
@@ -322,6 +322,8 @@ ECALL	0	0	0	0	0	0	0	0	0	1	1	1	0	0	1	1	ecall
 	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	-
 EBREAK	0	0	0	0	0	0	0	0	0	1	1	1	0	0	1	1	ebreak
 	0	0	0	0	0	0	0	0	0	0	0	1	0	0	0	0	-
+MRET	0	0	0	0	0	0	0	0	0	1	1	1	0	0	1	1	mret
+	0	0	1	1	0	0	0	0	0	0	1	0	0	0	0	0	-
 */})
 </script>
 
