enable to configure line no.

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@ window.onload = function() {
 				<option value="mot">mot file</option>
 </select>
 　　　　　start address <input name="txtadr" id="txtadr" value="0x700">
+　　　　　<label for="uselineno"><input type="checkbox" name="uselineno" id="uselineno" checked> line no.</label>
+　start <input name="linenostart" id="linenostart" value="10" size="6">
+　delta <input name="linenodelta" id="linenodelta" value="10" size="6">
 　　　　　size <span id="binsize">-</span>
 <div>
 <textarea id="textarea2" style="width:80%;height:15em;word-break: break-all;"></textarea>
