add bas (array dec+hex) mode

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ window.onload = function() {
 				<option value="bas16">bas (hex)</option>
 				<option value="basar2">bas (array bin)</option>
 				<option value="basar16">bas (array hex)</option>
+				<option value="basarmin">bas (array dec+hex)</option>
 				<option value="bin">binary</option>
 				<option value="latte">for IchigoLatte</option>
 				<option value="c">for C language</option>
