--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<!DOCTYPE html><html><head><meta charset="utf-8">
 <title>asm15 assembler for IchigoJam / IchigoLatte</title>
 <meta property="og:image" content="asm15.png">
 <link rel="apple-touch-icon" href="asm15.png"/>
