split constants into separate file

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <title>asm15 assembler for IchigoJam / IchigoLatte</title>
 <meta property="og:image" content="asm15.png">
 <link rel="apple-touch-icon" href="asm15.png"/>
+<script src="asm15constants.js"></script>
 <script src="asm15.js"></script>
 <script src="asm15output.js"></script>
 <!--<script src="asm15_example.js"></script>-->
