--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <script src="asm15constants.js"></script>
 <script src="asm15.js"></script>
 <script src="asm15output.js"></script>
-<script src="asm15ui.js"></script>
+<script src="asm15dom.js"></script>
 <!--<script src="asm15_example.js"></script>-->
 <style>
 body {
