--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@ DATA/DATABは1バイトずつ、DATAWは2バイトずつ、DATALは4バイトず
 <dt>(I|D)ADDR(W|L) @文字列</dt>
 <dd>指定したラベルのアドレスをデータとして出力する。アライメントはしない。
 Iは命令用(命令セットがM0の時、LSBを1にする)、Dはデータ用。Wは2バイト、Lは4バイト。</dd>
+<dt>CHECKSUM 対象開始アドレス, 対象バイト数, 種類[, デフォルト値]</dt>
+<dd>対象範囲のチェックサムを求め、出力する。アライメントは行わない。「デフォルト値」が指定されている場合、値が未定義のバイトの値として用いる。<br>
+種類は「LSUM2COMP」(4バイトずつ足した和の2の補数) または「CRC32」(CRC-32) を指定する。</dd>
+<dt>CHECKSUMR 対象開始位置, 対象バイト数, 種類[, デフォルト値]</dt>
+<dd>CHECKSUM と同様にチェックサムを出力する。対象範囲の開始位置を start address との差分で設定する。</dd>
 <dt>MODE (M0|RV32C)</dt>
 <dd>命令セットを切り替える。デフォルトはM0である。</dd>
 <dt>IF M0 GOTO @文字列</dt>
