--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ DATA/DATABは1バイトずつ、DATAWは2バイトずつ、DATALは4バイトず
 <dt>UDATA[B|W|L] データ(列)</dt>
 <dd>DATAと同様に指定したデータ(整数)を出力するが、アライメントは行わない。</dd>
 <dt>(I|D)ADDR(W|L) @文字列</dt>
-<dd>指定したラベルのアドレスをデータとして出力する。アライメントはしない。
+<dd>指定したラベルのアドレスをデータとして出力する。アライメントは行わない。
 Iは命令用(命令セットがM0の時、LSBを1にする)、Dはデータ用。Wは2バイト、Lは4バイト。</dd>
 <dt>CHECKSUM 対象開始アドレス, 対象バイト数, 種類[, デフォルト値]</dt>
 <dd>対象範囲のチェックサムを求め、出力する。アライメントは行わない。「デフォルト値」が指定されている場合、値が未定義のバイトの値として用いる。<br>
