--- a/armasm.html
+++ b/armasm.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
 <title>Cortex-M0 Armマシン語表 （asm15表記、抜粋）</title>
 <meta property="og:image" content="armasm.png">
+<link rel="icon" href="asm15.ico" sizes="16x16">
 <link rel="apple-touch-icon" href="armasm.png"/>
 <script src=lib/maketable2.js></script>
 <style>
