--- a/cpuemu.html
+++ b/cpuemu.html
@@ -5,6 +5,7 @@
 <meta name="format-detection" content="telephone=no"/>
 <title>cpuemu - Alpha1</title>
 <meta property="og:image" content="cpuemu.png">
+<link rel="icon" href="asm15.ico" sizes="16x16">
 <link rel="apple-touch-icon" href="cpuemu.png"/>
 <style>
 body {
