--- a/disasm15.html
+++ b/disasm15.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>disasm15 - disassembler for asm15</title>
+<link rel="icon" href="asm15.ico" sizes="16x16">
 <script src="readmcode.js"></script>
 <script src="disasm15.js"></script>
 </head>
