--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
 <title>asm15 assembler for IchigoJam / IchigoLatte</title>
 <meta property="og:image" content="asm15.png">
+<link rel="icon" href="asm15.ico" sizes="16x16">
 <link rel="apple-touch-icon" href="asm15.png"/>
 <script src="asm15constants.js"></script>
 <script src="asm15output.js"></script>
