--- a/rvasm.html
+++ b/rvasm.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
 <title>RV32C RISC-Vマシン語表 （asm15r、抜粋）</title>
 <meta property="og:image" content="rvasm.png">
+<link rel="icon" href="asm15.ico" sizes="16x16">
 <link rel="apple-touch-icon" href="rvasm.png"/>
 <script src=lib/maketable2.js></script>
 <style>
