enable to download result file

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ window.onload = function() {
 　start <input name="linenostart" id="linenostart" value="10" size="6">
 　delta <input name="linenodelta" id="linenodelta" value="10" size="6">
 　　　　　size <span id="binsize">-</span>
+　　　　　<a href="#" id="downloadlink">download</a>
 <div>
 <textarea id="textarea2" style="width:80%;height:15em;word-break: break-all;"></textarea>
 </div>
