improve DATA family
* allow comments to be written
* support strings

--- a/index.html
+++ b/index.html
@@ -85,12 +85,13 @@ window.onload = function() {
 <dt>@文字列</dt>
 <dd>ラベルを設定する。ラベルはGOTOの飛び先などに使用可能である。</dd>
 <dt>'文字列 / REM 文字列</dt>
-<dd>コメントを入れる。コメントは他の命令がある行につけることもできるが、DATA系の行にはつけられない。</dd>
+<dd>コメントを入れる。' を用いたコメントは他の命令がある行につけることもできる。</dd>
 <dt>DATA[B|W|L] データ(列)</dt>
-<dd>4バイト単位にアライメントした後、指定したデータ(整数)を出力する。データ列はコンマで区切る。
-DATA/DATABは1バイトずつ、DATAWは2バイトずつ、DATALは4バイトずつである。</dd>
+<dd>4バイト単位にアライメントした後、指定したデータを出力する。データ列はコンマで区切る。
+DATA/DATABは1バイトずつ、DATAWは2バイトずつ、DATALは4バイトずつである。<br>
+データは整数または文字列 ("" で囲む) で指定する。文字列は UTF-8 の各バイトに展開される。</dd>
 <dt>UDATA[B|W|L] データ(列)</dt>
-<dd>DATAと同様に指定したデータ(整数)を出力するが、アライメントは行わない。</dd>
+<dd>DATAと同様に指定したデータを出力するが、アライメントは行わない。</dd>
 <dt>(I|D)ADDR(W|L) @文字列</dt>
 <dd>指定したラベルのアドレスをデータとして出力する。アライメントは行わない。
 Iは命令用(命令セットがM0の時、LSBを1にする)、Dはデータ用。Wは2バイト、Lは4バイト。</dd>
